--- a/options.css
+++ b/options.css
@@ -16,8 +16,11 @@ h1{
 	width: 50px;
 	border: 0;
 	border-radius: 10px;
+	transition: 500ms;
+}
+#save_button:hover{
+	background-color: #34a2cc;
 }
 #save_status{
-	color: #55c500;
 	font-weight: bold;
 }
