tterシェアボタンがないページでもシェアできるようにボタンの挙動を追加

--- a/options.css
+++ b/options.css
@@ -8,6 +8,9 @@ h1{
 	border: 1px solid #000000;
 	border-radius: 10px;
 }
+#checkbox{
+	display: flex;
+}
 #save_button{
 	color: #ffffff;
 	background-color: #56b4ee;
