--- a/options.css
+++ b/options.css
@@ -1,15 +1,37 @@
+body{
+	background-color: #f2f2f2;
+	text-align: center;
+}
 h1{
-	color: #3492cc;
+	margin: 10px;
+	padding: 0;
+}
+#icon{
+	height: 5em;
+}
+p{
+	color: #666;
+	margin-bottom: 15px;
 }
 #instance_name{
 	outline: none;
+	padding: 10px;
 	margin: 5px;
+	width: 300px;
 	height: 20px;
-	border: 1px solid #000000;
+	border: 2px solid #ccc;
 	border-radius: 10px;
+	font-size: 16px;
 }
-#checkbox{
-	display: flex;
+#checkboxes{
+	margin-top: 15px;
+}
+input[type="checkbox"]{
+	margin-right: 10px;
+}
+label{
+	color: #333;
+	font-size: 14px;
 }
 #save_button{
 	color: #ffffff;
