WebExtension版のためにoptionsの修正、ついでにシェアボタンのz-indexを最大値に（コミット分けろ）

--- a/js_and_css/allpages.css
+++ b/js_and_css/allpages.css
@@ -10,7 +10,7 @@
 	text-align: center;
 	border-radius: 1.5em;
 	border: none;
-	z-index: 10000;
+	z-index: 2147483647;
 }
 #_twishare_to_misskey_share_img{
 	height: 100%;
