--- a/options/options.css
+++ b/options/options.css
@@ -14,6 +14,12 @@ h1{
 	color: #666;
 	/*font-size: 0.7em;*/
 }
+#installed{
+	text-decoration: underline;
+}
+#installed:hover{
+	text-decoration: underline;
+}
 .description{
 	color: #666;
 }
