--- a/js_and_css/allpages.css
+++ b/js_and_css/allpages.css
@@ -1,22 +1,20 @@
 #_twishare_to_misskey_share{
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	margin: 10px;
-	padding: 0;
-	height: 40px;
-	width: 40px;
-	background-color: #33a300;
-	text-align: center;
-	border-radius: 20em;
-	border: none;
-	z-index: 2147483647;
+	position: fixed !important;
+    /*JSから操作するときに競合を防ぐためtopとleftで指定*/
+	top: calc(100% - 60px);
+	left: calc(100% - 60px);
+	margin: 10px !important;
+	padding: 0 !important;
+	height: 40px !important;
+	width: 40px !important;
+	background-color: #33a300 !important;
+	text-align: center !important;
+	border-radius: 20em !important;
+	border: none !important;
+	z-index: 2147483647 !important;
 }
 #_twishare_to_misskey_share_img{
-	position: absolute;
-	top: 0;
-	right: 0;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+	height: 100% !important;
+	margin: 0 !important;
+	padding: 0 !important;
 }
